--- a/styling/index.css
+++ b/styling/index.css
@@ -21,8 +21,8 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(5, max-content);
-        min-height: 100vh;
-        min-width: 100vw;
+        height: 100vh;
+        width: 100vw;
     }
 
     a {
