--- a/styling/mobile.css
+++ b/styling/mobile.css
@@ -34,8 +34,13 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(5, max-content);
-        min-height: 100vh;
-        min-width: 100vw;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    a {
+        text-decoration: none;
+        color: var(--black);
     }
 
     /* ------------------------------------------------------------- */
@@ -58,9 +63,13 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        text-align: center;
+        position: relative;
         padding: 20px 15px 20px 30px;
         /* padding: 20px 20px 0px 40px; */
         height: 100%;
+        width: 100%;
+        z-index: 10;
     }
 
     .section.header .nav img {
@@ -75,9 +84,8 @@
         position: absolute;
         left: -100%;
         top: 120px;
-        gap: 0;
+        z-index: 10;
         background-color: rgba(207, 207, 207, 0);
-        text-align: center;
         transition: 0.2s;
     }
 
@@ -99,12 +107,12 @@
         margin: 0px auto;
     }
 
-    .section.header ul li a:hover {
+    .section.header .nav-link:hover {
         color: var(--brightGold);
         text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.4);
     }
 
-    .section.header ul li a:active {
+    .section.header .nav-link:active {
         color: var(--white);
     }
 
@@ -196,6 +204,7 @@
 
     .section.banner .greeting .greetingButtons a {
         display: block;
+        text-align: center;
         font-size: 18px;
         margin: 20px 0px;
         background-color:var(--white);
