--- a/styling/tablet.css
+++ b/styling/tablet.css
@@ -35,6 +35,11 @@
         min-width: 100vw;
     }
 
+    a {
+        text-decoration: none;
+        color: var(--black);
+    }
+
     /* ------------------------------------------------------------- */
 
     /* HEADER START ----------------------------------------*/
@@ -317,6 +322,7 @@
 
     .section.products a {
         font-size: 20px;
+        text-align: center;
         border: 2px solid var(--black);
         padding: 10px;
         border-radius: 5px;
